--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Movie Gallery</title>
+  <!-- Bootstrap CSS Link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+<div class="container-fluid">
+  <!-- First Row -->
+  <div class="row">
+    <div class="col-sm-1">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div>
+    <!-- Repeat for a total of 12 columns in the first row -->
+    <!-- Example: -->
+    <!-- <div class="col-sm-1">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div> -->
+  </div>
+
+  <!-- Second Row -->
+  <div class="row">
+    <div class="col-sm-2">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div>
+    <!-- Repeat for a total of 6 columns in the second row -->
+    <!-- Example: -->
+    <!-- <div class="col-sm-2">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div> -->
+  </div>
+
+  <!-- Third Row -->
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div>
+    <!-- Repeat for a total of 3 columns in the third row -->
+    <!-- Example: -->
+    <!-- <div class="col-sm-4">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div> -->
+  </div>
+
+  <!-- Fourth Row -->
+  <div class="row">
+    <div class="col-sm-12">
+      <img src="your_image_url.jpg" class="img-fluid" alt="Movie Image">
+    </div>
+    <!-- Single column in the fourth row -->
+  </div>
+</div>
+
+<!-- Bootstrap JS and Popper.js (Optional) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
